[package]
name = "rust-web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
zeroize = "=1.3.0" 
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
hyper = "1.0"
hyper-util = { version = "0.1", features = ["tokio"] }
solana-client = "1.18.14"
solana-sdk = "1.18.14"
bs58 = "0.5.1"
spl-token = "4.0.0"
base64 = "0.22.0"
spl-associated-token-account = "1.1.2"
